@@ -1,5 +1,14 @@
 2015-02-10  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* plugin.c (plugin_input_file_t): Add use_mmap.
+	(plugin_pagesize): New.
+	(get_view): Use plugin_pagesize.  Set use_mmap if mmap is used.
+	(plugin_load_plugins): Initialize plugin_pagesize.
+	(plugin_maybe_claim): Unmap the buffer if plugin didn't claim the
+	file.
+
+2015-02-10  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* plugin.c (get_view): Align offset passed to mmap.
 
 2015-02-08  H.J. Lu  <hongjiu.lu@intel.com>
